name:                raytrace
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Paul Brauner
maintainer:          polux2001@gmail.com
copyright:           2023 Paul Brauner
build-type:          Simple
cabal-version:       >=1.10

executable raytrace
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       JuicyPixels,
                       linear,
                       safe,
                       lens,
                       parallel
  ghc-options: -W -O2 -threaded -rtsopts -with-rtsopts=-N
